# kb_encoder

./: filter_qasc.py  generate_t5_input.py  init.py  install.sh  main.py  requirements.txt  test_attr_overlap.py  test_average_search.py  test_comm_retrieval.py  test_keywords.py  test_matcher_attr.py  test_matcher_performance.py  test_qa.py  test_result.py  test_retrieve.py  test_retrieve2.py  test_retrieve_splitted.py  test_retrieve_splitted_comm_qa.py
configs/: train_arc.json  train_arc_search.json  train_arc_t5.json  train_c4kb_base.json  train_c4kb_large.json  train_comm_qa_deberta_v3.json  train_comm_qa_deberta_v3_match.json  train_comm_qa_deberta_v3_match2.json  train_comm_qa_deberta_v3_search.json  train_comm_qa_deberta_v3_vat.json  train_comm_qa_t5.json  train_comm_qa_t5_11b_match.json  train_comm_qa_t5_3b_match.json  train_comm_qa_t5_3b_match_ensemble1.json  train_comm_qa_t5_3b_match_ensemble1_single_gpu.json  train_comm_qa_t5_3b_match_ensemble2_single_gpu.json  train_comm_qa_t5_3b_match_ensemble3_single_gpu.json  train_comm_qa_t5_3b_match_ensemble4_single_gpu.json  train_comm_qa_t5_base_match.json  train_comm_qa_t5_large_match.json  train_comm_qa_t5_match.json  train_comm_qa_t5_small_match.json  train_iter_comm_qa_t5_base_match.json  train_iter_comm_qa_t5_large_match.json  train_iter_qa_t5_large_match.json  train_ob_qa.json  train_ob_qa_11b.json  train_ob_qa_16.json  train_ob_qa_deberta_v2_match.json  train_ob_qa_deberta_v3.json  train_ob_qa_deberta_v3_chained_sequence_match.json  train_ob_qa_deberta_v3_fact.json  train_ob_qa_deberta_v3_fact_vat.json  train_ob_qa_deberta_v3_keywords.json  train_ob_qa_deberta_v3_match.json  train_ob_qa_deberta_v3_match_vat.json  train_ob_qa_deberta_v3_with_search.json  train_ob_qa_search.json  train_ob_qa_vat.json  train_ob_qa_with_search.json  (+2 more)
encoder/dataset/: arc.py  arc_search.py  arc_search_bak.py  base.py  c4_kb.py  c4kb.py  commonsense_qa.py  download.py  glue.py  openbook_qa.py  openbook_qa_chained_sequence.py  openbook_qa_fact.py  openbook_qa_keywords.py  openbook_qa_search.py  openbook_qa_with_search.py  squad.py  utils.py
encoder/dataset/concept_net/matcher_src/: CMakeLists.txt  concept_net.cpp  concept_net.h  init.cpp  main.cpp  matcher.cpp  matcher.h
encoder/model/: attr.py  ext_vocab.py  kb_ae.py  layers.py  model.py  perturbation.py  sift.py  t5_model.py
encoder/trainer/: arc_search_trainer.py  arc_trainer.py  (+20 more)
t5/: batch_eval.py  download.sh  eval_single.sh  eval_tpu.sh  install.sh  stop.sh  task.py  train_single.sh  train_tpu.sh
(+49 files in other folders)
